# streamy

./: .gitignore  README.md  pyproject.toml
streamy/: __init__.py  __main__.py  event.py  middleware.py  publisher.py  stream.py  subscriber.py  utils.py
streamy/middleware/: __init__.py  __main__.py  basic.py  manager.py
streamy/subscriber/: __init__.py  __main__.py  manager.py
tests/: test_EventStream.py
